# GoSurvey

./: .clangd  .gitignore  .gitmessage.txt  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  RemedyDebug.rdbg  TRACKER.md  gosurvey_imgui.ini
.claude/skills/add-feature/: SKILL.md
.claude/skills/bug-fix/: SKILL.md
docs/: ARCHITECTURE.md  gs-file-format.txt
resources/: default-template.gs
resources/hatches/: acadiso.pat
resources/icons/: app.rc
resources/linetypes/: acad.lin  acadiso.lin
samples/: closed_loop_trav.fbk  traverse_sample.fbk
spec/: architecture.md  coding-standards.md  project.md  requirements.md  roadmap.md
src/: AppIcon.cpp  AppIcon.hpp  CadCommands.cpp  CadCommands.hpp  CadLinetype.cpp  CadLinetype.hpp  CadSnap.cpp  CadSnap.hpp  CadUi.cpp  CadUi.hpp  DxfColors.cpp  DxfColors.hpp  DxfIo.cpp  DxfIo.hpp  GsIo.cpp  GsIo.hpp  ImGuiLayout.cpp  MtextRichFormat.cpp  MtextRichFormat.hpp  SplashScreen.cpp  SplashScreen.hpp  SurveyCsv.cpp  SurveyPoints.cpp  SurveyPoints.hpp  UserPrefs.cpp  UserPrefs.hpp  ViewportRenderer.cpp  ViewportRenderer.hpp  WinFileDialogs.cpp  WinFileDialogs.hpp  main.cpp
src/app/: main.cpp
src/cad/: CadCommands.cpp  CadCommands.hpp  CadCoordinateFrame.cpp  CadCoordinateFrame.hpp  CadRubberPreview.cpp  CadRubberPreview.hpp  CadSnap.cpp  CadSnap.hpp  TransformPreview.cpp  TransformPreview.hpp  geom2d.cpp  geom2d.hpp
src/commands/: CadCommands.cpp  CadCommands.hpp  CadCoordinateFrame.cpp  CadEntities.hpp  HatchBoundary.hpp  HatchGeom.hpp  HatchPat.hpp  HatchPattern.hpp  PaperSpace.hpp  TextStyle.hpp
src/io/: DxfIo.cpp  DxfIo.hpp  GsIo.cpp  PdfPlot.cpp  PdfPlot.hpp  SurveyCsv.cpp  SurveyCsv.hpp  SurveyCsvValidate.hpp  UserPrefs.cpp  UserPrefs.hpp
src/pdf/: PdfAttach.cpp  PdfAttach.hpp
src/platform/: AppIcon.cpp  AppIcon.hpp  WinFileDialogs.cpp  WinFileDialogs.hpp  WinFrameControls.cpp  WinFrameControls.hpp
src/render/: ViewportRenderer.cpp  ViewportRenderer.hpp
src/survey/: SurveyPoints.cpp  SurveyPoints.hpp
src/traverse/: FbkImport.cpp  FbkImport.hpp  TraverseCalc.cpp  TraverseCalc.hpp  TraverseLeastSquares.cpp  TraverseLeastSquares.hpp
src/ui/: CadUi.cpp  CadUi.hpp  CadUiHelpers.hpp  CadUiSettings.cpp  CadUi_CopySurveyModal.cpp  CadUi_DxfPointConflictModal.cpp  CadUi_ImportExportPoints.cpp  CadUi_PageSetup.cpp  CadUi_SurveyReports.cpp  CadUi_TraverseEditor.cpp  CommandBar.hpp  FontRegistry.cpp  FontRegistry.hpp  ImGuiLayout.cpp  ImGuiLayout.hpp  MtextRichFormat.cpp  MtextRichFormat.hpp  PdfAttachDialog.cpp  PdfAttachDialog.hpp  ShxFont.cpp  ShxFont.hpp  SplashScreen.cpp  ViewportPickPolicy.hpp
src/util/: AngleFormat.hpp  NumFormat.hpp  StringUtil.hpp  geom2d.cpp
src/viewport/: CadRubberPreview.cpp  CadRubberPreview.hpp  CadSnap.cpp  CadSnap.hpp  TransformPreview.cpp  TransformPreview.hpp
tests/: AngleFormatTests.cpp  CommandLineTests.cpp  HatchGeomTests.cpp  NumFormatTests.cpp  PaperSpaceTests.cpp  SurveyCsvValidateTests.cpp  TextStyleTests.cpp  TraverseTests.cpp
tools/: gen_icons.cpp  git-commit.ps1
verification/: build-checklist.md  release-checklist.md  review-checklist.md  testing-checklist.md  verification.md
verification/skills/: README.md
verification/skills/architecture-review/: CHECKLIST.md  PROMPT.md  SKILL.md
verification/skills/build-project/: CHECKLIST.md  PROMPT.md  SKILL.md
verification/skills/code-review/: CHECKLIST.md  PROMPT.md  SKILL.md
verification/skills/debugging/: CHECKLIST.md  PROMPT.md  SKILL.md
verification/skills/dependency-audit/: CHECKLIST.md  PROMPT.md  SKILL.md
verification/skills/performance-review/: CHECKLIST.md  PROMPT.md  SKILL.md
verification/skills/release-review/: CHECKLIST.md  PROMPT.md  SKILL.md
verification/skills/testing/: CHECKLIST.md  PROMPT.md  SKILL.md
workshop/: implementation-rules.md  task-template.md  workflow.md
workshop/tasks/: TASK-001-paper-space-inc1.md  TASK-002-paper-space-inc2-viewports.md  TASK-003-paper-space-inc3a-ribbon-rectvp.md  TASK-004-paper-space-inc3b-vp-select-edit.md  TASK-005-paper-space-inc3c-floating-mspace.md  TASK-006-paper-space-inc4-plotting.md  TASK-007-paper-space-inc3e-viewport-layer-freeze.md  TASK-008-paper-space-inc3d-polygonal-viewport-phase1-gl-pass.md  TASK-009-paper-space-native-geometry.md  TASK-010-paperspace-floating-mspace-fixes.md  TASK-011-dxf-text-and-hatch-fill-import.md  TASK-012-clipboard-copy-paste-across-spaces.md  TASK-013-paper-space-object-parity.md  TASK-014-floating-command-line.md  TASK-015-hatch-select-and-command.md  TASK-016-text-styles.md
